@@ -2,10 +2,15 @@ package com.example.blpslab1.service;
 
 import com.example.blpslab1.exceptions.*;
 import com.example.blpslab1.model.StoredFile;
-import com.example.blpslab1.model.User;
 import com.example.blpslab1.repo.FileRepo;
-import com.example.blpslab1.repo.UserRepo;
+import com.example.blpslab1.serviceConnection.Message;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.jms.annotation.EnableJms;
+import org.springframework.jms.annotation.JmsListener;
+import org.springframework.jms.core.JmsTemplate;
+import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
@@ -17,43 +22,55 @@ import java.util.stream.Collectors;
 
 import static java.lang.Thread.sleep;
 
+@Slf4j
 @Service
-@RequiredArgsConstructor
+@Component
+@EnableJms
 public class FileService {
+    private final JmsTemplate jmsTemplate;
     private final FileRepo fileRepo;
-    private final UserRepo userRepo;
+    private final String queueName = "File";
+
+    @Autowired
+    public FileService(FileRepo fileRepo, JmsTemplate jmsTemplate) {
+        this.fileRepo = fileRepo;
+        this.jmsTemplate = jmsTemplate;
+    }
 
 
-    public List<String> getAllFilesName() {
-        return fileRepo.findAll().stream()
-                .map(StoredFile::getTitle)
-                .collect(Collectors.toList());
+    @JmsListener(destination = queueName + "AllFilesNames-request")
+    public void getAllFilesName(Message message) {
+        List<String> list = fileRepo.findAll().stream()
+                .map(file -> "Title: " + file.getTitle() + ", username: " + file.getUsername())
+                .toList();
+        Message response = new Message(list);
+        jmsTemplate.convertAndSend(queueName + "AllFilesNames-response", response);
     }
 
 
     //UserNotFoundException
-    public List<String> getAllFilesNameByUsername(String username) {
-        userRepo.findUserByUsername(username).orElseThrow(UserNotFoundException::new);
-        return fileRepo.findAllByUsername(username).stream()
+    @JmsListener(destination = queueName + "AllFilesNamesByUsername-request")
+    public void getAllFilesNameByUsername(Message message) {
+        List<String> list = fileRepo.findAllByUsername(message.getUsername()).stream()
                 .map(StoredFile::getTitle)
-                .collect(Collectors.toList());
-
+                .toList();
+        Message response = new Message(list);
+        jmsTemplate.convertAndSend(queueName + "AllFilesNamesByUsername-response", response);
     }
 
     //FileAlreadyExistsException
     //UserNotFoundException
-    public void upload(String username, String filePath) throws IOException, InterruptedException {
-        User user = userRepo.findUserByUsername(username).orElseThrow(UserNotFoundException::new);
-        Path path = Paths.get(filePath);
+    @JmsListener(destination = queueName + "SaveFile-request")
+    public void upload(Message message) throws IOException, InterruptedException {
+        Path path = Paths.get(message.getFilePath());
         String fileName = path.getFileName().toString();
         String data = Files.readString(path);
         try {
-            fileRepo.findStoredFileByTitleAndUsername(fileName, username).orElseThrow(FileNotFoundException::new);
-            throw new FileAlreadyExistsException("Файл с таким именем уже существует");
+            fileRepo.findStoredFileByTitleAndUsername(fileName, message.getUsername()).orElseThrow(FileNotFoundException::new);
         } catch (FileNotFoundException e) {
-            StoredFile storedFile = new StoredFile(fileName, data, username);
+            StoredFile storedFile = new StoredFile(fileName, data, message.getUsername());
+            if (!message.isSubscription()) sleep(5000);
             fileRepo.save(storedFile);
-            if (!user.getSubscription()) sleep(5000);
         }
 
 
@@ -62,20 +79,25 @@ public class FileService {
 
     //FileAlreadyExistException
     //UserNotFoundException
-    public StoredFile getStoredFile(String username, String title) {
-        userRepo.findUserByUsername(username).orElseThrow(UserNotFoundException::new);
-        return fileRepo.findStoredFileByTitleAndUsername(title, username).orElseThrow(FileNotFoundException::new);
-
+    @JmsListener(destination = queueName + "GetFile-request")
+    public void getStoredFile(Message message) {
+        StoredFile file = fileRepo.findStoredFileByTitleAndUsername(message.getTitle(), message.getUsername()).orElseThrow(FileNotFoundException::new);
+        Message response = new Message(file.getTitle(), file.getData(), file.getUsername());
+        jmsTemplate.convertAndSend(queueName + "GetFile-response", response);
     }
 
     //FileAlreadyExistException
     //UserNotFoundException
-    public void deleteFile(String username, String title) {
-        userRepo.findUserByUsername(username).orElseThrow(UserNotFoundException::new);
-        StoredFile storedFile = fileRepo.findStoredFileByTitleAndUsername(title, username).orElseThrow(FileNotFoundException::new);
+    @JmsListener(destination = queueName + "DeleteFile-request")
+    public void deleteFile(Message message) {
+        StoredFile storedFile = fileRepo.findStoredFileByTitleAndUsername(message.getTitle(), message.getUsername()).orElseThrow(FileNotFoundException::new);
         fileRepo.delete(storedFile);
-
     }
 
+    @JmsListener(destination = queueName + "DeleteAllFilesByUsername-request")
+    public void deleteAllFilesByUsername(Message message) {
+        fileRepo.deleteAll(fileRepo.findAll().stream().filter(the_user -> the_user.getUsername().equals(message.getUsername())).toList());
+
+    }
 
 }
